<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@android:color/white"
    android:padding="@dimen/margin_big"
    android:orientation="vertical">

    <Switch
        android:id="@+id/sw_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:checked="true"
        android:text="Enable"
        android:textAppearance="?android:textAppearanceSmall" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textCapCharacters"
            android:maxLength="100"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/value">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="numberDecimal"
            android:maxLength="100"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_noemi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/no_emi"
        android:visibility="gone"
        tools:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_emino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:text="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:visibility="gone"
        tools:text="Value of Emi"
        tools:visibility="visible"

        />

    <Switch
        android:id="@+id/sw_emi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:checked="false"
        android:text="@string/is_it_a_loan"
        android:textAppearance="?android:textAppearanceSmall" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        app:counterEnabled="true"
        app:counterMaxLength="200">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:scrollbarSize="4dp"
            android:background="@null"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="Save"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:text="Delete"
        />
</LinearLayout>